<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="com.course.moritz.items.activity.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_item_name"
            style="@style/EditStyle"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_item_price"
            style="@style/EditStyle"
            android:hint="@string/price"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edit_item_supplier_name"
            style="@style/EditStyle"
            android:hint="@string/supplier_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_item_supplier_phone"
            style="@style/EditStyle"
            android:hint="@string/supplier_phone"
            android:inputType="phone" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_decrease"
            style="@style/DetailButtons"
            android:layout_alignParentStart="true"
            android:text="@string/btn_decrease" />

        <TextView
            android:id="@+id/edit_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="50sp"
            tools:text="94" />

        <Button
            android:id="@+id/btn_increase"
            style="@style/DetailButtons"
            android:layout_alignParentEnd="true"
            android:text="@string/btn_increase" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:padding="8dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textSize="25sp"
                android:layout_weight="2"
                android:text="Increase/Decrease by"
                />

            <Spinner
                android:id="@+id/change_value_spinner"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:entries="@array/value_array"
                />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>